<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <include
        android:id="@+id/toolbar"
        layout="@layout/common_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_5"
        android:hint="@string/hint_enter_nid_serial"
        app:placeholderText="@string/hint_nid_serial"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toStartOf="@id/searchIv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.pourosova.data.core.designsystem.CustomET
            android:id="@+id/searchEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/searchIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_5"
        android:backgroundTint="@color/color_1E88E5"
        android:contentDescription="@string/image_content_description"
        android:padding="@dimen/padding_5"
        app:tint="@color/black"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/searchTil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchTil"
        app:layout_constraintTop_toTopOf="@+id/searchTil" />

    <com.iamkamrul.vsl.ConstraintLayout
        android:id="@+id/listCl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTil"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemsRv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_beneficiary"
            android:layout_marginTop="@dimen/margin_8" />

    </com.iamkamrul.vsl.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>